Script to commit translations to a branch.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1289,6 +1289,23 @@ public.translationmessage               = SELECT, INSERT, UPDATE, DELETE
 public.translationrelicensingagreement  = SELECT
 public.translationtemplateitem          = SELECT, INSERT, UPDATE, DELETE
 
+[translationstobranch]
+type=user
+groups=script
+groups=script
+public.branch                           = SELECT
+public.branchjob                        = SELECT
+public.language                         = SELECT
+public.pofile                           = SELECT
+public.pomsgid                          = SELECT
+public.potemplate                       = SELECT
+public.potmsgset                        = SELECT
+public.potranslation                    = SELECT
+public.product                          = SELECT
+public.productseries                    = SELECT
+public.translationmessage               = SELECT
+public.translationtemplateitem          = SELECT
+
 [oopsprune]
 type=user
 groups=script
