Moved credentials for RT bug trackers into the Launchpad config.

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -31,6 +31,10 @@ oops_prefix: XCW
 error_dir: /var/tmp/lperr
 sync_debbugs_comments: True
 
+[checkwatches.credentials]
+rt.example.com.username: zaphod
+rt.example.com.password: pangalacticgargleblaster
+
 [codebrowse]
 cachepath: /var/tmp/codebrowse.launchpad.dev/cache
 log_folder:
