--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -194,6 +194,13 @@ sync_debbugs_comments: False
 # datatype: string
 xmlrpc_url: http://xmlrpc-private.launchpad.dev:8087/bugs
 
+[checkwatches.credentials]
+# Login credentials for bug trackers.
+rt.example.com.username: none
+rt.example.com.password: none
+rt.cpan.org.username: none
+rt.cpan.org.password: none
+
 [codebrowse]
 # Where to store codebrowse's sqlite "files changed" caches.  If
 # empty, the logs will be stored in a folder called 'logs' next to the
