--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1628,7 +1628,7 @@ public.libraryfiledownloadcount         = SELECT, INSERT, UPDATE, DELETE
 # be shuffled around between the daily and hourly sections without
 # changing DB permissions.
 type=user
-groups=script
+groups=script,read
 public.codeimportresult                 = SELECT, DELETE
 public.emailaddress                     = SELECT
 public.oauthnonce                       = SELECT, DELETE
@@ -1636,10 +1636,12 @@ public.openidassociation                = SELECT, DELETE
 public.openidconsumerassociation        = SELECT, DELETE
 public.openidconsumernonce              = SELECT, DELETE
 public.revisioncache                    = SELECT, DELETE
-public.person                           = SELECT
+public.person                           = SELECT, DELETE
 public.revisionauthor                   = SELECT, UPDATE
 public.hwsubmission                     = SELECT, UPDATE
 public.mailinglistsubscription          = SELECT, DELETE
+public.teamparticipation                = SELECT, DELETE
+public.emailaddress                     = SELECT, UPDATE
 
 [garbo_daily]
 type=user
