--- a/buildout-templates/_pythonpath.py.in
+++ b/buildout-templates/_pythonpath.py.in
@@ -1,4 +1,5 @@
-# Copyright 2004-2005 Canonical Ltd.  All rights reserved.
+# Copyright 2009 Canonical Ltd.  This software is licensed under the
+# GNU Affero General Public License version 3 (see the file LICENSE).
 
 # NOTE: This is a generated file.  The original is in
 # buildout-templates/_pythonpath.py.in
