--- a/buildout-templates/bin/lint.sh.in
+++ b/buildout-templates/bin/lint.sh.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 #
-# Copyright <YEARS> Canonical Ltd.  This software is licensed under the
-# GNU Affero General Public License version 3; see the file LICENSE for
+# Copyright 2009 Canonical Ltd.  This software is licensed under the
+# GNU Affero General Public License version 3 (see the file LICENSE).
 #
 # Runs xmlint, pyflakes and pylint on files changed from parent branch.
 # Use '-v' to run pylint under stricter conditions with additional messages.
