--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -590,6 +590,7 @@ public.revisionauthor                   = SELECT, INSERT, UPDATE
 public.revisioncache                    = SELECT, INSERT
 public.revisionparent                   = SELECT, INSERT
 public.revisionproperty                 = SELECT, INSERT
+public.seriessourcepackagebranch        = SELECT
 public.sourcepackagename                = SELECT
 public.staticdiff                       = SELECT, INSERT, DELETE
 public.validpersoncache                 = SELECT
