--- a/versions.cfg
+++ b/versions.cfg
@@ -12,6 +12,7 @@ ipython = 0.9.1
 launchpadlib = 1.0.1
 lazr.uri = 1.0.1
 mozrunner = 1.3.3
+mocker = 0.10.1
 oauth = 1.0
 Paste = 1.7.2
 PasteDeploy = 1.3.3
