Set default Storm cache size to 100 for development, 10000 for production appservers and 5000 for other production systems

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -116,6 +116,8 @@ geoip_database: /usr/share/GeoIP/GeoLiteCity.dat
 geonames_identity: lpdev
 # Set to True to test read-only mode.
 read_only: False
+storm_cache: generational
+storm_cache_size: 100
 
 [launchpad_session]
 cookie: launchpad_dev
