--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -521,7 +521,7 @@ soft_request_timeout: None
 storm_cache: generational
 
 # The size of the Storm cache.
-storm_cache_size: 50000
+storm_cache_size: 5000
 
 
 [debug]
@@ -996,6 +996,9 @@ geoip_database: /usr/share/GeoIP/GeoIPCity.dat
 # The identity used to do remote geo to time zone lookups at
 # ba-ws.geonames.net.
 geonames_identity:
+
+storm_cache: generational
+storm_cache_size: 10000
 
 
 [launchpad_session]
