--- a/lib/lp/soyuz/scripts/gina/scripts/run-gina-zopeless.example
+++ b/lib/lp/soyuz/scripts/gina/scripts/run-gina-zopeless.example
@@ -1,4 +1,7 @@
 #!/bin/sh
+#
+# Copyright 2009 Canonical Ltd.  This software is licensed under the
+# GNU Affero General Public License version 3 (see the file LICENSE).
 
 SRV=/home/debonzi/Warthogs/projects/branches
 
