Set lazr.smtptest to version 1.1

--- a/versions.cfg
+++ b/versions.cfg
@@ -10,6 +10,7 @@ functest = 0.8.7
 httplib2 = 0.4.0
 ipython = 0.9.1
 launchpadlib = 1.0.1
+lazr.smtptest = 1.1
 lazr.uri = 1.0.1
 mozrunner = 1.3.3
 mocker = 0.10.1
