Integrating delayed-copies and other minor tweaks (db permissions and build creation for source-only delayed copies). All copy methods (web UI, API and 'copy-package' script) will use delayed-copies instead of direct-copies when file privacy mismatch is detected. 'unembargo-package' continues to work with direct-copies and fixing privacy mismatch in place.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1115,7 +1115,7 @@ public.gpgkey                           = SELECT
 public.packageupload                    = SELECT, UPDATE
 public.packageuploadsource              = SELECT
 public.packageuploadbuild               = SELECT
-public.packageuploadcustom              = SELECT
+public.packageuploadcustom              = SELECT, UPDATE
 
 # Distribution/Publishing stuff
 public.archive                          = SELECT, UPDATE
@@ -1132,20 +1132,21 @@ public.buildqueue                       = SELECT, INSERT, UPDATE
 public.pocketchroot                     = SELECT
 public.sourcepackagerelease             = SELECT, UPDATE
 public.binarypackagerelease             = SELECT, UPDATE
-public.sourcepackagereleasefile         = SELECT
-public.binarypackagefile                = SELECT
+public.sourcepackagereleasefile         = SELECT, UPDATE
+public.binarypackagefile                = SELECT, UPDATE
 public.sourcepackagename                = SELECT
 public.binarypackagename                = SELECT
 public.binarypackagepublishinghistory   = SELECT
 public.sourcepackagepublishinghistory   = SELECT
 public.sourcepackagefilepublishing      = SELECT
 public.binarypackagefilepublishing      = SELECT
-public.securesourcepackagepublishinghistory = SELECT, INSERT
-public.securebinarypackagepublishinghistory = SELECT, INSERT
+public.securesourcepackagepublishinghistory = SELECT, INSERT, UPDATE
+public.securebinarypackagepublishinghistory = SELECT, INSERT, UPDATE
 public.component                        = SELECT
 public.section                          = SELECT
 public.componentselection               = SELECT
 public.sectionselection                 = SELECT
+public.packagediff                      = SELECT, UPDATE
 
 # Librarian stuff
 public.libraryfilealias                 = SELECT, INSERT
