Update to windmill 1.2

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,7 +5,6 @@ parts =
     tags
     iharness
     i18n
-    windmill
 unzip = true
 eggs-directory = eggs
 download-cache = download-cache
@@ -41,6 +40,7 @@ source-directory = buildout-templates
 [scripts]
 recipe = zc.recipe.egg
 eggs = lp
+    windmill
 # XXX gary 2009-5-12 bug 375751:
 # Make mailman built and installed in a more normal way.
 extra-paths = ${buildout:directory}/lib/mailman
@@ -49,8 +49,9 @@ initialization = import os
                  os.environ['STORM_CEXTENSIONS'] = '1'
                  os.environ.setdefault('LPCONFIG', '${configuration:instance_name}')
 entry-points = stxdocs=zope.configuration.stxdocs:main
-    lp-windmill=lp.scripts.utilities.windmill:main
     googletestservice=canonical.launchpad.testing.googletestservice:main
+    windmill=windmill.bin.windmill_bin:main
+    lp-windmill=lp.scripts.utilities.lpwindmill:main
 
 [iharness]
 recipe = zc.recipe.egg
@@ -74,15 +75,3 @@ packages = canonical.launchpad
 domain = launchpad
 output = locales
 zcml = <include file="../../site.zcml" />
-
-
-[python2.5]
-executable = /usr/bin/python2.5
-
-[windmill]
-recipe = zc.recipe.egg
-eggs = lp
-    windmill
-python = python2.5
-entry-points = windmill=windmill.bin.windmill_bin:main
-scripts = windmill
