--- a/versions.cfg
+++ b/versions.cfg
@@ -2,7 +2,7 @@
 versions = versions
 
 [versions]
-CherryPy = 3.1.2
+ctypes = 1.0.2
 # We use a version of feedvalidator that has been changed to not
 # change the default socket timeout on import.
 feedvalidator = 0.0.0DEV-r1049-hacked
