--- a/versions.cfg
+++ b/versions.cfg
@@ -2,6 +2,7 @@
 versions = versions
 
 [versions]
+# Required by Windmill to run on 2.4
 ctypes = 1.0.2
 # We use a version of feedvalidator that has been changed to not
 # change the default socket timeout on import.
