Adding support for per-PPA configuration sections, currently used for defining external dependencies.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1331,6 +1331,12 @@ private_base_url: https://private-ppa.launchpad.net
 signing_keys_root: /var/tmp/ppa-signing-keys
 
 
+[ppa.master]
+# Space separated repository URLs to be used as build dependencies.
+# datatype: string
+dependencies: none
+
+
 [poimport]
 # The database user which will be used by this process.
 # datatype: string
