minor tweaks after pre-implementation with sinzui.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1332,7 +1332,10 @@ signing_keys_root: /var/tmp/ppa-signing-keys
 
 
 [ppa.master]
-# Space separated repository URLs to be used as build dependencies.
+# Line-separated repository lines to be used as build dependencies, in
+# the following format:
+#   deb [user:pass@]<host>[/path] %(series)s[-pocket] [components]
+# 'series' variable is replaced with the series name of the context build.
 # datatype: string
 dependencies: none
 
