--- a/versions.cfg
+++ b/versions.cfg
@@ -29,12 +29,12 @@ windmill = 1.2
 wsgi-fileserver = 0.2.7
 wsgi-jsonrpc = 0.2.8
 wsgi-xmlrpc = 0.2.7
-z3c.recipe.filetemplate = 2.0.2
+z3c.recipe.filetemplate = 2.1dev-r101784
 z3c.recipe.i18n = 0.5.3
 z3c.recipe.tag = 0.2.0
-zc.buildout = 1.2.1
+zc.buildout = 1.4.0dev-r101783
 zc.lockfile = 1.0.0
-zc.recipe.egg = 1.2.2
+zc.recipe.egg = 1.3.0dev-r101773
 ZConfig = 2.6.1
 zope.app.locales = 3.5.1
 zope.configuration = 3.6.0
