Fix some problems:
  - Restore the "[buildout]" thing in buildout.cfg (!).  Thanks, Barry.

  - Restore a comment to database/schema/Makefile

  - Undo the spurious addition of a newline to the end of
    lib/canonical/tests/test_no_conflict_marker.py (while adding the
    newline is probably okay, and maybe even preferable, it shouldn't
    be part of this branch).

--- a/database/schema/Makefile
+++ b/database/schema/Makefile
@@ -1,6 +1,7 @@
 # Copyright 2009 Canonical Ltd.  This software is licensed under the
 # GNU Affero General Public License version 3 (see the file LICENSE).
 #
+# Quick hack makefile to (re)create the Launchpad database.
 # One day the guts of this will be migrated to Python
 #
 
