--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -350,6 +350,11 @@ access_log: /tmp/codehosting-access.log
 # disconnected.
 idle_timeout: 3600
 
+# Products for which to expand lp:<product-name> to just HTTP urls.
+# If we expect a lot of people to branch a particular product, we can
+# save ourselves some load by directing them all to a HTTP url.
+hot_products:
+
 
 [codeimport]
 # Where the Bazaar imports are stored.
