Actually hook everything up, making sure that OOPSes are logged for Bazaar errors.

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -23,6 +23,11 @@ logfile: -
 [buildsequencer_job.slave_scanner]
 mindelay: 10
 
+[bzr_lpserve]
+error_dir: /var/tmp/codehosting.test
+oops_prefix: BZR
+copy_to_zlog: false
+
 [canonical]
 show_tracebacks: True
 
