--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -144,6 +144,16 @@ command: cronscripts/buildd-slave-scanner.py
 mindelay: 5
 
 
+# Configuration for spawned Bazaar subprocesses.
+[bzr_lpserve]
+# See [error_reports].
+oops_prefix: none
+# See [error_reports].
+error_dir: none
+# See [error_reports].
+copy_to_zlog: false
+
+
 [canonical]
 # datatype: boolean
 chunkydiff: True
