create a generic supermirror_puller config section

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1499,6 +1499,17 @@ worker_timeout: 900
 maximum_workers: 4
 
 
+[supermirror_puller]
+# See [error_reports].
+error_dir: none
+
+# See [error_reports].
+oops_prefix: none
+
+# See [error_reports].
+copy_to_zlog: false
+
+
 [supermirror_import_puller]
 # See [error_reports].
 error_dir: none
