Get Bazaar from the buildout.

--- a/versions.cfg
+++ b/versions.cfg
@@ -2,6 +2,7 @@
 versions = versions
 
 [versions]
+bzr = 1.16.1
 # Required by Windmill to run on 2.4
 ctypes = 1.0.2
 # We use a version of feedvalidator that has been changed to not
