Created special BatchNavigator to enforce special match_batch_size for POFile:+translate.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1418,6 +1418,10 @@ debian_import_email: noreply@launchpad.net
 # datatype: boolean
 global_suggestions_enabled: True
 
+# A different batch size for POFile:+translate pages to keep them from
+# timing out.
+# datatype: integer
+translate_pages_max_batch_size: 50
 
 [rosettabranches]
 # The database user which will be used by the rosetta-branches cronscript.
