--- a/versions.cfg
+++ b/versions.cfg
@@ -84,7 +84,9 @@ zc.i18n = 0.5.2
 zc.lockfile = 1.0.0
 zc.recipe.egg = 1.3.0dev-r101773
 zc.recipe.filestorage = 1.0.0
-zc.recipe.testrunner = 1.2.1dev-r101777 # 1.0.0 # 1.1.0
+# zc.recipe.testrunner = 1.0.0 # KGS
+# zc.recipe.testrunner = 1.1.0 # chameleon integration
+zc.recipe.testrunner = 1.2.1dev-r101777
 zc.resourcelibrary = 1.0.1
 zc.table = 0.6
 zc.zope3recipes = 0.6.2
@@ -164,9 +166,11 @@ zope.app.zcmlfiles = 3.4.3
 zope.app.zopeappgenerations = 3.4.0
 zope.app.zptpage = 3.4.1
 zope.cachedescriptors = 3.4.1
-zope.component = 3.4.0 # 3.5.1
+# zope.component = 3.5.1
+zope.component = 3.4.0
 zope.configuration = 3.4.0
-zope.contentprovider = 3.4.0 # 3.5.0
+# zope.contentprovider = 3.5.0
+zope.contentprovider = 3.4.0
 zope.contenttype = 3.4.0
 zope.copypastemove = 3.4.0
 zope.datetime = 3.4.0
@@ -174,31 +178,39 @@ zope.decorator = 3.4.0
 zope.deferredimport = 3.4.0
 zope.deprecation = 3.4.0
 zope.documenttemplate = 3.4.0
-zope.dottedname = 3.4.2 # 3.4.5
+zope.dottedname = 3.4.5
+zope.dottedname = 3.4.2
 zope.dublincore = 3.4.0
 zope.error = 3.5.1
 zope.event = 3.4.1
-zope.exceptions = 3.4.0 # 3.5.2
+# zope.exceptions = 3.5.2
+zope.exceptions = 3.4.0
 zope.file = 0.3.0
 zope.filerepresentation = 3.4.0
 zope.formlib = 3.4.0
 zope.hookable = 3.4.0
 zope.html = 1.0.1
-zope.i18n = 3.6.0 # 3.4.0 is in Zope 3.4.0 KGS; we need >= 3.5.0 for chameleon
+# zope.i18n 3.4.0 is in Zope 3.4.0 KGS; we need >= 3.5.0 for chameleon
+zope.i18n = 3.6.0
 zope.i18nmessageid = 3.4.3
 zope.index = 3.4.1
 zope.interface = 3.5.1
 zope.lifecycleevent = 3.4.0
-zope.location = 3.4.0 # 3.5.2
+# zope.location = 3.5.2
+zope.location = 3.4.0
 zope.mimetype = 0.3.0
 zope.minmax = 1.1.0
 zope.modulealias = 3.4.0
 zope.pagetemplate = 3.4.0
-zope.proxy = 3.4.2 # 3.5.0
-zope.publisher = 3.4.6 # 3.5.6
+# zope.proxy = 3.5.0
+zope.proxy = 3.4.2
+# zope.publisher = 3.5.6
+zope.publisher = 3.4.6
 zope.rdb = 3.4.0
-zope.schema = 3.4.0 # 3.5.4
-zope.security = 3.4.1 # 3.6.0
+# zope.schema = 3.5.4
+zope.schema = 3.4.0
+# zope.security = 3.6.0
+zope.security = 3.4.1
 zope.securitypolicy = 3.4.1
 zope.sendmail = 3.4.0
 zope.sequencesort = 3.4.0
@@ -206,12 +218,16 @@ zope.server = 3.4.3
 zope.session = 3.4.1
 zope.size = 3.4.0
 zope.structuredtext = 3.4.0
-zope.tal = 3.4.1 # 3.4.0
+# zope.tal = 3.4.0
+zope.tal = 3.4.1
 zope.tales = 3.4.0
 zope.testbrowser = 3.4.2
-zope.testing = 3.6.0 # 3.5.6 # 3.7.4
+# zope.testing = 3.5.6 # from KGS
+# zope.testing = 3.7.4 # from the chameleon integration
+zope.testing = 3.6.0
 zope.testrecorder = 0.3.0
 zope.thread = 3.4
+# zope.traversing = 3.5.2
 zope.traversing = 3.4.1 # 3.5.2
 zope.ucol = 1.0.2
 zope.viewlet = 3.4.2
