try to make ec2test happy, and fix up a bootstrap bug.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,5 @@
 # setuptools or zc.buildout, you need to put it in ./download-cache/dist and
 # commit there, and change the specification in versions.cfg, as described
 # generally for dependencies in ./doc/buildout.txt.
-find_links = ./eggs
-             ./download-cache/dist
-allow_hosts = None
+allow_hosts = file://*
 
