--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,5 @@
 # setuptools or zc.buildout, you need to put it in ./download-cache/dist and
 # commit there, and change the specification in versions.cfg, as described
 # generally for dependencies in ./doc/buildout.txt.
-allow_hosts = file://*
+allow_hosts =
 
