--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1601,6 +1601,7 @@ public.person                           = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
 public.revision                         = SELECT
+public.revisionauthor                   = SELECT, INSERT
 public.sourcepackagename                = SELECT
 public.staticdiff                       = SELECT, INSERT
 public.teammembership                   = SELECT
