--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ extends = versions.cfg
 # allow-picked-versions = false # A buildout bug is not allowing this to work.
 
 prefer-final = true
+include-site-packages = false
 
 develop = .
 
@@ -36,6 +37,7 @@ eggs = lp
 # Make mailman built and installed in a more normal way.
 extra-paths = ${buildout:directory}/lib/mailman
 source-directory = buildout-templates
+include-site-packages = true
 
 [scripts]
 recipe = zc.recipe.egg
@@ -52,6 +54,7 @@ entry-points = stxdocs=zope.configuration.stxdocs:main
     googletestservice=canonical.launchpad.testing.googletestservice:main
     windmill=windmill.bin.windmill_bin:main
     lp-windmill=lp.scripts.utilities.lpwindmill:main
+include-site-packages = true
 
 [iharness]
 recipe = zc.recipe.egg
@@ -63,10 +66,12 @@ initialization = import os
                  os.environ['LPCONFIG'] = '${configuration:instance_name}'
 entry-points = iharness=canonical.database.harness:ipython
 scripts = iharness ipython=ipy
+include-site-packages = true
 
 [tags]
 recipe = z3c.recipe.tag:tags
 eggs = lp
+include-site-packages = true
 
 [i18n]
 recipe = z3c.recipe.i18n:i18n
@@ -75,3 +80,4 @@ packages = canonical.launchpad
 domain = launchpad
 output = locales
 zcml = <include file="../../site.zcml" />
+include-site-packages = true
