Add funkload 1.10.0 to the Launchpad buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,6 +41,7 @@ source-directory = buildout-templates
 recipe = zc.recipe.egg
 eggs = lp
     windmill
+    funkload
 # XXX gary 2009-5-12 bug 375751:
 # Make mailman built and installed in a more normal way.
 extra-paths = ${buildout:directory}/lib/mailman
