--- a/versions.cfg
+++ b/versions.cfg
@@ -8,6 +8,7 @@ ctypes = 1.0.2
 # We use a version of feedvalidator that has been changed to not
 # change the default socket timeout on import.
 feedvalidator = 0.0.0DEV-r1049-hacked
+funkload = 1.10.0
 functest = 0.8.7
 httplib2 = 0.4.0
 ipython = 0.9.1
