--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1296,10 +1296,12 @@ public.translationtemplateitem          = SELECT, INSERT, UPDATE, DELETE
 [translationstobranch]
 type=user
 groups=script
-groups=script
-public.branch                           = SELECT
+public.branch                           = SELECT, UPDATE
 public.branchjob                        = SELECT
+public.emailaddress                     = SELECT
+public.job                              = SELECT
 public.language                         = SELECT
+public.person                           = SELECT
 public.pofile                           = SELECT
 public.pomsgid                          = SELECT
 public.potemplate                       = SELECT
