--- a/buildout.cfg
+++ b/buildout.cfg
@@ -48,6 +48,11 @@ extra-paths = ${buildout:directory}/lib/mailman
 initialization = import os
                  os.environ['STORM_CEXTENSIONS'] = '1'
                  os.environ.setdefault('LPCONFIG', '${configuration:instance_name}')
+                 # this can hopefully be removed when Twisted is used as an egg.
+                 import warnings
+                 'ignore',
+                 'Module .+ was already imported from .+, but .+ is being added.*',
+                 UserWarning)
 entry-points = stxdocs=zope.configuration.stxdocs:main
     googletestservice=canonical.launchpad.testing.googletestservice:main
     windmill=windmill.bin.windmill_bin:main
