reinstate line that got lost in buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -52,6 +52,7 @@ initialization = import os
                  os.environ.setdefault('LPCONFIG', '${configuration:instance_name}')
                  # this can hopefully be removed when Twisted is used as an egg.
                  import warnings
+                 warnings.filterwarnings(
                  'ignore',
                  'Module .+ was already imported from .+, but .+ is being added.*',
                  UserWarning)
