Remove beta test restrictions.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1628,12 +1628,8 @@ openid_delegate_profile: False
 
 
 [vhost.api]
-# The name of the team whose members may access the web service.
-# If the value is set to None, any person with an OAuth token
-# may access the service. If the name does not match a team name,
-# no one can access the web service.
-# data-type: string, a team name or None.
-beta_test_team: launchpad
+# This key should be removed once the production configs have been updated.
+beta_test_team: disabled
 
 
 [vhost.blueprints]
