--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1298,11 +1298,10 @@ public.translationtemplateitem          = SELECT, INSERT, UPDATE, DELETE
 [translationstobranch]
 type=user
 groups=script
+groups=script
 public.branch                           = SELECT
 public.branchjob                        = SELECT
-public.job                              = SELECT
 public.language                         = SELECT
-public.person                           = SELECT
 public.pofile                           = SELECT
 public.pomsgid                          = SELECT
 public.potemplate                       = SELECT
