--- a/versions.cfg
+++ b/versions.cfg
@@ -27,6 +27,7 @@ simplesettings = 0.4
 SimpleTal = 4.1
 storm = 0.14stub-storm-launchpad-288
 wadllib = 0.1
+webunit = 1.3.8
 windmill = 1.2
 wsgi-fileserver = 0.2.7
 wsgi-jsonrpc = 0.2.8
