docutils version bump

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,6 +5,7 @@ versions = versions
 bzr = 1.16.1
 # Required by Windmill to run on 2.4
 ctypes = 1.0.2
+docutils = 0.5
 # We use a version of feedvalidator that has been changed to not
 # change the default socket timeout on import.
 feedvalidator = 0.0.0DEV-r1049-hacked
