More login race conditions, and ensure CD order fields are allowed lengths

--- a/benchmarks/ShipIt.conf
+++ b/benchmarks/ShipIt.conf
@@ -89,7 +89,9 @@ startup_delay = 0.2
 sleep_time = 1
 
 # cycle_time = time to wait between cycle in seconds
-cycle_time = 1
+# We have a significant delay in case we had to terminate the previous
+# cycle by restarting the service.
+cycle_time = 45
 
 # same keys than in [ftest] section
 log_to = file
