--- a/utilities/sourcedeps.conf
+++ b/utilities/sourcedeps.conf
@@ -1,4 +1,3 @@
-bzr=lp:~launchpad-pqm/bzr/dev/
 bzr-git=lp:~launchpad-pqm/bzr-git/devel/
 bzr-loom=lp:~launchpad-pqm/bzr-loom/trunk/
 bzr-svn=lp:~launchpad-pqm/bzr-svn/devel/
@@ -26,3 +25,5 @@ zope=lp:~launchpad-pqm/zope3/3.4/
 pygettextpo=lp:~launchpad/pygettextpo/trunk/
 old_xmlplus=lp:~launchpad/dtdparser/trunk/
 lsprof=lp:~launchpad/lsprof/trunk/
+canonical-identity-provider=lp:~launchpad-pqm/canonical-identity-provider/trunk/=optional
+shipit=lp:~launchpad-pqm/shipit/trunk/=optional
