--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1696,3 +1696,7 @@ public.emailaddress                     = SELECT
 public.person                           = SELECT
 public.teammembership                   = SELECT
 public.teamparticipation                = SELECT
+
+[branch-rewrite]
+type=user
+public.branch                           = SELECT
