--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -365,6 +365,12 @@ idle_timeout: 3600
 # save ourselves some load by directing them all to a HTTP url.
 hot_products:
 
+# Branch rewrite cache lifetime.
+#
+# How long, in seconds, to cache results of the branch path -> id
+# mapping done by branch-rewrite.py for.
+branch_rewrite_cache_lifetime: 10
+
 
 [codeimport]
 # Where the Bazaar imports are stored.
