Improve comment per review

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -553,11 +553,12 @@ soft_request_timeout: None
 # datatype: string
 storm_cache: generational
 
-# The size of the Storm cache. We start small, because this is the
-# default used by everything and we have no idea if we are dealing
-# with tiny objects or huge objects. Individual scripts can easily
-# increase the cache size if database performance is an issue and RAM
-# usage is not. See Bug #393625 for the issue that prompted this change.
+# The size of the Storm cache in objects. We start small, because this
+# is the default used by everything and we have no idea if we are
+# dealing with tiny objects or huge objects. Individual scripts can
+# easily increase the cache size if database performance is an issue
+# and RAM usage is not. See Bug #393625 for the issue that prompted
+# this change.
 # datatype: integer
 storm_cache_size: 500
 
