--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1469,7 +1469,7 @@ translate_pages_max_batch_size: 50
 # database users but the rosetta branch scanner is incorrectly reusing an
 # existing database user.
 # The database user which will be used by the rosetta-branches cronscript.
-# datatype: string.
+# datatype: string
 dbuser: branchscanner
 storm_cache: generational
 storm_cache_size: 500
