--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1507,10 +1507,15 @@ dbuser: statistician
 # The longest period of time, in seconds, that the scheduler will
 # wait for the worker to produce meaningful output.
 # datatype: integer
-worker_timeout: 900
+worker_timeout: 1800
 
+# The maximum number of puller worker processes we pull at once.
 # datatype: integer
-maximum_workers: 4
+maximum_workers: 10
+
+# How long in seconds to wait between asking for new branches to pull.
+# datatype: integer
+polling_interval: 10
 
 
 [supermirror_puller]
