Use the development keyserver in the development config.

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -112,6 +112,10 @@ maps_api_key: ABQIAAAAd8GIgO6pcskVE20WMo0tMRTWrrsyo_91eNrAe8_Mod2l0UnqlRSKiPprMS
 [google_test_service]
 launch: True
 
+[gpghandler]
+host: keyserver.launchpad.dev
+public_host: keyserver.launchpad.dev
+
 [launchpad]
 code_domain: code.launchpad.dev
 default_batch_size: 5
