Override the test public keyserver to keyserver.ubuntu.com.

--- a/configs/testrunner/launchpad-lazr.conf
+++ b/configs/testrunner/launchpad-lazr.conf
@@ -115,6 +115,7 @@ site: http://launchpad.dev:8092/cse
 
 [gpghandler]
 host: localhost
+public_host: keyserver.ubuntu.com
 
 [karmacacheupdater]
 max_scaling: 2
