--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1569,6 +1569,7 @@ public.messagechunk                     = SELECT, INSERT
 public.person                           = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
+public.seriessourcepackagebranch        = SELECT
 public.sourcepackagename                = SELECT
 public.staticdiff                       = SELECT, INSERT
 public.teammembership                   = SELECT
