Update modules, test cases and configuration.

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -119,7 +119,7 @@ public_host: keyserver.launchpad.dev
 [launchpad]
 code_domain: code.launchpad.dev
 default_batch_size: 5
-max_bug_attachment_size: 2097152
+max_attachment_size: 2097152
 branchlisting_batch_size: 6
 openid_preauthorization_acl:
     localhost http://launchpad.dev/
