--- a/configs/testrunner/launchpad-lazr.conf
+++ b/configs/testrunner/launchpad-lazr.conf
@@ -121,7 +121,7 @@ public_host: keyserver.ubuntu.com
 max_scaling: 2
 
 [launchpad]
-max_bug_attachment_size: 1024
+max_attachment_size: 1024
 bzr_imports_root_url: http://localhost:10899
 geoip_database: /usr/share/GeoIP/GeoLiteCity.dat
 
