Give export-to-branch access to POFileTranslator, probably needed for translation credits.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1304,6 +1304,7 @@ public.job                              = SELECT
 public.language                         = SELECT
 public.person                           = SELECT
 public.pofile                           = SELECT
+public.pofiletranslator                 = SELECT
 public.pomsgid                          = SELECT
 public.potemplate                       = SELECT
 public.potmsgset                        = SELECT
