--- a/buildout-templates/bin/jstest.in
+++ b/buildout-templates/bin/jstest.in
@@ -1,5 +1,4 @@
-#!/usr/bin/python
-#
+#!${buildout:executable}
 # Copyright 2009 Canonical Ltd.  This software is licensed under the
 # GNU Affero General Public License version 3 (see the file LICENSE).
 
@@ -15,10 +14,13 @@ The script exit codes are:
 
 """
 
+# Add the buildout sys.path
+import sys
+sys.path[0:0] = [${string-paths}]
+
 
 import subprocess
 import os
-import sys
 from lp.scripts.utilities.lpwindmill import runLaunchpad
 
 
