Added a dependency on windmill for the filetemplate scripts - the jstest.in script template requires it.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,6 +36,7 @@ instance_name = development
 [filetemplates]
 recipe = z3c.recipe.filetemplate
 eggs = lp
+       windmill
 # XXX gary 2009-5-12 bug 375751:
 # Make mailman built and installed in a more normal way.
 extra-paths = ${buildout:directory}/lib/mailman
