Tests and fixes for BugNotificationPruner

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1665,6 +1665,7 @@ public.libraryfiledownloadcount         = SELECT, INSERT, UPDATE, DELETE
 # changing DB permissions.
 type=user
 groups=script,read
+public.bugnotification                  = SELECT, DELETE
 public.codeimportresult                 = SELECT, DELETE
 public.emailaddress                     = SELECT
 public.oauthnonce                       = SELECT, DELETE
