--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -578,6 +578,16 @@ references_scoreboard_file: /tmp/refcounts-scoreboard.txt
 # in refcounts and memory.
 references_leak_log: /tmp/references-leak.log
 
+[diff]
+# The maximum size in bytes to read from the librarian to make available in
+# the web UI.  512k == 524288 bytes.
+# datatype: integer
+max_read_chunk: 524288
+
+# The maximum number of lines to format using the format_diff tal formatter.
+max_line_format: 5000
+
+
 [distributionmirrorprober]
 # The database user which will be used by this process.
 # datatype: string
