Limit Diff.text librarian read to the config.diff.max_read_size value.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -582,7 +582,7 @@ references_leak_log: /tmp/references-leak.log
 # The maximum size in bytes to read from the librarian to make available in
 # the web UI.  512k == 524288 bytes.
 # datatype: integer
-max_read_chunk: 524288
+max_read_size: 524288
 
 # The maximum number of lines to format using the format_diff tal formatter.
 max_line_format: 5000
