--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -585,7 +585,7 @@ references_leak_log: /tmp/references-leak.log
 max_read_size: 524288
 
 # The maximum number of lines to format using the format_diff tal formatter.
-max_line_format: 5000
+max_format_lines: 5000
 
 
 [distributionmirrorprober]
