rosetta-approve-imports.py should connect as a unique database user

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -436,6 +436,10 @@ public.translator                       = SELECT
 public.validpersoncache                 = SELECT
 public.validpersonorteamcache           = SELECT
 
+[poimportapprover]
+type=user
+groups=poimport
+
 [poexport]
 # Rosetta export script
 type=user
