--- a/versions.cfg
+++ b/versions.cfg
@@ -27,18 +27,19 @@ simplejson = 2.0.9
 simplesettings = 0.4
 SimpleTal = 4.1
 storm = 0.14trunk-321
+uuid = 1.30
 wadllib = 0.1
 webunit = 1.3.8
 windmill = 1.2
 wsgi-fileserver = 0.2.7
 wsgi-jsonrpc = 0.2.8
 wsgi-xmlrpc = 0.2.7
-z3c.recipe.filetemplate = 2.1dev-gary-r101903
+z3c.recipe.filetemplate = 2.1dev-gary-r102489
 z3c.recipe.i18n = 0.5.3
 z3c.recipe.tag = 0.2.0
-zc.buildout = 1.4.0dev-gary-r101953
+zc.buildout = 1.4.0dev-gary-r102490
 zc.lockfile = 1.0.0
-zc.recipe.egg = 1.3.0dev-gary-r101773
+zc.recipe.egg = 1.3.0dev-gary-r102487
 ZConfig = 2.6.1
 zope.app.locales = 3.5.1
 zope.configuration = 3.6.0
@@ -61,6 +62,7 @@ zope.proxy = 3.5.0
 zope.publisher = 3.5.6
 zope.security = 3.6.0
 zope.tal = 3.4.0
+zope.tales = 3.4.0
 zope.traversing = 3.5.2
 zc.recipe.testrunner = 1.1.0
 
