--- a/.bzrignore
+++ b/.bzrignore
@@ -49,3 +49,4 @@ dist
 ./download-cache
 ./_pythonpath.py
 ./production-configs
+lib/lp/archiveuploader/tests/data/suite/bar_1.0-2/bar_1.0.orig.tar.gz
