--- a/versions.cfg
+++ b/versions.cfg
@@ -2,30 +2,36 @@
 versions = versions
 
 [versions]
+# Alphabetical, please! :-)
 bzr = 1.17
+chameleon.core = 1.0b35
+chameleon.zpt = 1.0b17
 # Required by Windmill to run on 2.4
 ctypes = 1.0.2
 docutils = 0.5
+elementtree = 1.2.6-20050316
 # We use a version of feedvalidator that has been changed to not
 # change the default socket timeout on import.
 feedvalidator = 0.0.0DEV-r1049-hacked
-funkload = 1.10.0
 functest = 0.8.7
+funkload = 1.10.0
 httplib2 = 0.4.0
 ipython = 0.9.1
 launchpadlib = 1.0.2
 lazr.smtptest = 1.1
 lazr.uri = 1.0.1
-mozrunner = 1.3.4
 mocker = 0.10.1
+mozrunner = 1.3.4
 oauth = 1.0
 Paste = 1.7.2
 PasteDeploy = 1.3.3
 python-openid = 2.2.1
+pytz = 2009j
 setuptools = 0.6c9
 simplejson = 2.0.9
 simplesettings = 0.4
 SimpleTal = 4.1
+sourcecodegen = 0.6.9
 storm = 0.14trunk-321
 uuid = 1.30
 wadllib = 0.1
@@ -34,44 +40,37 @@ windmill = 1.2
 wsgi-fileserver = 0.2.7
 wsgi-jsonrpc = 0.2.8
 wsgi-xmlrpc = 0.2.7
+z3c.pt = 1.0b16
+z3c.ptcompat = 0.5.3
 z3c.recipe.filetemplate = 2.1dev-gary-r102489
 z3c.recipe.i18n = 0.5.3
 z3c.recipe.tag = 0.2.0
 zc.buildout = 1.4.0dev-gary-r102499
 zc.lockfile = 1.0.0
 zc.recipe.egg = 1.3.0dev-gary-r102487
+zc.recipe.testrunner = 1.1.0
 ZConfig = 2.6.1
 zope.app.locales = 3.5.1
-zope.configuration = 3.6.0
-zope.event = 3.4.1
-zope.i18nmessageid = 3.4.3
-zope.interface = 3.5.1
-zope.schema = 3.5.4
-zope.testing = 3.7.4
-
 zope.component = 3.5.1
+zope.configuration = 3.6.0
 zope.contentprovider = 3.5.0
 zope.deferredimport = 3.4.0
 zope.deprecation = 3.4.0
 zope.dottedname = 3.4.5
+zope.event = 3.4.1
 zope.exceptions = 3.5.2
 zope.hookable = 3.4.0
 zope.i18n = 3.6.0
+zope.i18nmessageid = 3.4.3
+zope.interface = 3.5.1
 zope.location = 3.5.2
 zope.proxy = 3.5.0
 zope.publisher = 3.5.6
+zope.schema = 3.5.4
 zope.security = 3.6.0
 zope.tal = 3.4.0
 zope.tales = 3.4.0
+zope.testing = 3.7.4
 zope.traversing = 3.5.2
-zc.recipe.testrunner = 1.1.0
 
-elementtree = 1.2.6-20050316
-pytz = 2009j
-
-z3c.ptcompat = 0.5.3
-z3c.pt = 1.0b16
-chameleon.zpt = 1.0b17
-chameleon.core = 1.0b35
-sourcecodegen = 0.6.9
 
