revert to some older versions so we do not have to worry about compatibility

--- a/versions.cfg
+++ b/versions.cfg
@@ -24,7 +24,7 @@ feedvalidator = 0.0.0DEV-r1049
 functest = 0.8.7
 funkload = 1.10.0
 httplib2 = 0.4.0
-IPython = 0.9.1
+ipython = 0.9.1
 jquery.javascript = 1.0.0
 jquery.layer = 1.0.0
 launchpadlib = 1.0.2
@@ -171,7 +171,7 @@ zope.app.zopeappgenerations = 3.4.0
 zope.app.zptpage = 3.4.1
 zope.cachedescriptors = 3.4.1
 zope.component = 3.5.1
-zope.configuration = 3.6.0
+zope.configuration = 3.4.0
 zope.contentprovider = 3.5.0
 zope.contenttype = 3.4.0
 zope.copypastemove = 3.4.0
@@ -180,7 +180,7 @@ zope.decorator = 3.4.0
 zope.deferredimport = 3.4.0
 zope.deprecation = 3.4.0
 zope.documenttemplate = 3.4.0
-zope.dottedname = 3.4.5
+zope.dottedname = 3.4.2
 zope.dublincore = 3.4.0
 zope.error = 3.5.1
 zope.event = 3.4.1
@@ -195,7 +195,7 @@ zope.i18nmessageid = 3.4.3
 zope.index = 3.4.1
 zope.interface = 3.5.1
 zope.lifecycleevent = 3.4.0
-zope.location = 3.5.2
+zope.location = 3.4.0
 zope.mimetype = 0.3.0
 zope.minmax = 1.1.0
 zope.modulealias = 3.4.0
@@ -203,7 +203,7 @@ zope.pagetemplate = 3.4.0
 zope.proxy = 3.5.0
 zope.publisher = 3.5.6
 zope.rdb = 3.4.0
-zope.schema = 3.5.4
+zope.schema = 3.4.0
 zope.security = 3.6.0
 zope.securitypolicy = 3.4.1
 zope.sendmail = 3.4.0
@@ -218,7 +218,7 @@ zope.testbrowser = 3.4.2
 zope.testing = 3.7.4
 zope.testrecorder = 0.3.0
 zope.thread = 3.4
-zope.traversing = 3.5.2
+zope.traversing = 3.4.1
 zope.ucol = 1.0.2
 zope.viewlet = 3.4.2
 zope.wfmc = 3.4.0
