Modified Auth.conf file for the auth tests - it was a copy of ShipIt.conf

--- a/benchmarks/Auth.conf
+++ b/benchmarks/Auth.conf
@@ -6,20 +6,17 @@
 # Main section
 #
 [main]
-title=ShipIt
-description=ShipIt load test
+title=Auth
+description=Testing load with basic authentication to Launchpad
 
 # the server url to test.
-url=https://shipit.staging.launchpad.net
-
-# Database connection string to the Launchpad database.
-database_conninfo=dbname=lpmain_staging host=localhost port=55435
+url=https://staging.launchpad.net
 
 # ------------------------------------------------------------
 # Tests description and configuration
 #
-[test_shipit]
-description=Create an account, request cds, cancel order.
+[test_auth]
+description=Does the login to Launchpad page.
 
 
 # ------------------------------------------------------------
@@ -54,10 +51,10 @@ description=The benching machine
 log_to = console file
 
 # log_path = path and file name to store log file
-log_path = shipit-test.log
+log_path = auth-test.log
 
 # result_path = path to store the xml result file
-result_path = shipit-test.xml
+result_path = auth-test.xml
 
 # ok_codes = list of successfull HTTP response code default is 200:301:302
 # ok_codes =  200:301:302
@@ -95,8 +92,8 @@ cycle_time = 45
 
 # same keys than in [ftest] section
 log_to = file
-log_path = shipit-bench.log
-result_path = shipit-bench.xml
+log_path = auth-bench.log
+result_path = auth-bench.xml
 #ok_codes =  200:301:302
 sleep_time_min = 0
 sleep_time_max = 2
