Adding login name and password to the conf file.

--- a/benchmarks/Auth.conf
+++ b/benchmarks/Auth.conf
@@ -8,6 +8,8 @@
 [main]
 title=Auth
 description=Testing load with basic authentication to Launchpad
+login=foo@mailinator.com
+password=test
 
 # the server url to test.
 url=https://staging.launchpad.net
