squelch blather warnings in cronscripts about pkg_resources reimport tricks (usually of twisted)

--- a/buildout-templates/_pythonpath.py.in
+++ b/buildout-templates/_pythonpath.py.in
@@ -11,3 +11,10 @@ import sys, os
 sys.path[0:0] = [${string-paths}]
 # Enable Storm's C extensions
 os.environ['STORM_CEXTENSIONS'] = '1'
+
+# we don't want to bother tests or logs with these.
+import warnings
+warnings.filterwarnings(
+    'ignore',
+    'Module .+ was already imported from .+, but .+ is being added.*',
+    UserWarning)
