--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -98,6 +98,11 @@ rw_main_slave:  dbname=launchpad_dev
 ro_main_master: dbname=launchpad_dev_template
 ro_main_slave:  dbname=launchpad_dev_template
 
+# XXX stub 20100407 bug=557271: These next two are ignored, and should
+# be removed after the May 2010 rollout.
+auth_master: bug 557271
+auth_slave:  bug 557271
+
 [distributionmirrorprober]
 use_proxy: False
 timeout: 10
