Improve table styling.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -1385,3 +1385,11 @@ body.tab-bugs #portlet-subscribers .sprite {
 .distromirrorstatusTWODAYSBEHIND {color: red;}
 .distromirrorstatusONEWEEKBEHIND {color: red;}
 .distromirrorstatusUNKNOWN {color: grey;}
+
+table.code th {
+    text-align: left;
+    font-weight: bold;
+}
+table.code th, table.code td {
+    padding-right: 1em;
+}
