--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -35,20 +35,27 @@ public.is_team(text)                       = EXECUTE
 public.is_printable_ascii(text)            = EXECUTE
 public.launchpaddatabaserevision           = SELECT
 public.name_blacklist_match(text)          = EXECUTE
-public.fticache                            =
 public.pillarname                          = SELECT
 public.ulower(text)                        = EXECUTE
-public._killall_backends(text)             =
 public.generate_openid_identifier()        = EXECUTE
 public.getlocalnodeid()                    = EXECUTE
 public.replication_lag()                   = EXECUTE
 public.replication_lag(integer)            = EXECUTE
 public.assert_patch_applied(integer, integer, integer) = EXECUTE
+# Explicitly state 'no permissions on these objects' to silence
+# security.py warnings.
+public.fticache                            =
+public._killall_backends(text)             =
 public.exclusivelocks                      =
 public.alllocks                            =
 public.pgstattuple(oid)                    =
 public.pgstattuple(text)                   =
 public.bugnotificationarchive              =
+public.lp_account                          =
+public.lp_personlocation                   =
+public.lp_person                           =
+public.lp_teamparticipation                =
+public.bug_update_latest_patch_uploaded(integer) =
 
 [ro]
 # A user with full readonly access to the database. Generally used for
