Add back in the old script sections, killing staging right now.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1440,6 +1440,41 @@ oops_prefix: none
 # See [error_reports].
 copy_to_zlog: false
 
+##
+## TODO: delete mpcreationjobs section after 10.04 rollout.
+##
+[mpcreationjobs]
+# The database user which will be used by this process.
+# datatype: string
+dbuser: mp-creation-job
+storm_cache: generational
+storm_cache_size: 500
+
+# See [error_reports].
+error_dir: none
+
+# See [error_reports].
+oops_prefix: none
+
+# See [error_reports].
+copy_to_zlog: false
+
+##
+## TODO: delete update_preview_diffs section after 10.04 rollout.
+##
+[update_preview_diffs]
+dbuser: update-preview-diffs
+
+# See [error_reports].
+error_dir: none
+
+# See [error_reports].
+oops_prefix: none
+
+# See [error_reports].
+copy_to_zlog: false
+
+
 [upgrade_branches]
 dbuser: upgrade-branches
 
