Add a missing db permission.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1677,6 +1677,7 @@ public.person                           = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
 public.project                          = SELECT
+public.seriessourcepackagebranch        = SELECT
 public.sourcepackagename                = SELECT
 public.staticdiff                       = SELECT, INSERT
 public.teamparticipation                = SELECT
