Add js and css for mode switching.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -667,6 +667,7 @@ ul.language, li.language             {
 .translationimportstatusBLOCKED a {color: blue;}
 .translationimportstatusNEEDS_INFORMATION,
 .translationimportstatusNEEDS_INFORMATION a {color: maroon;}
+#translation-switch-working-mode {color: #093; display: block;}
 
 /* ==== Translations hand-made forms ==== */
 
