Additional adjustments to make the security field writable in forms and correct some tests.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1337,6 +1337,7 @@ public.productseries                    = SELECT
 public.question                         = SELECT
 public.questionbug                      = SELECT
 public.distribution                     = SELECT
+public.distributionsourcepackage        = SELECT, INSERT, UPDATE
 public.distroseries                     = SELECT
 public.sourcepackagename                = SELECT
 public.sourcepackagerelease             = SELECT
