Update our pytz release

--- a/versions.cfg
+++ b/versions.cfg
@@ -49,7 +49,7 @@ pycrypto = 2.0.1
 pyOpenSSL = 0.10
 python-memcached = 1.45
 python-openid = 2.2.1
-pytz = 2009l
+pytz = 2010h
 RestrictedPython = 3.5.1
 roman = 1.4.0
 setproctitle = 1.0
