--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -312,3 +312,6 @@ hostname: feeds.launchpad.dev
 # so disable that here. note that the testrunner config inherits
 # this setting from us.
 send_email: false
+
+[build_from_branch]
+enabled = True
