a start at combining the puller and filesystem endpoints

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -52,8 +52,7 @@ secret_path: configs/development/codebrowse-secret
 [codehosting]
 launch: True
 authentication_endpoint: http://xmlrpc-private.launchpad.dev:8087/authserver
-branchfs_endpoint: http://xmlrpc-private.launchpad.dev:8087/branchfilesystem
-branch_puller_endpoint: http://xmlrpc-private.launchpad.dev:8087/branch_puller
+codehosting_endpoint: http://xmlrpc-private.launchpad.dev:8087/codehosting
 supermirror_root: http://bazaar.launchpad.dev/
 hosted_branches_root: /var/tmp/bazaar.launchpad.dev/push-branches/
 codebrowse_root: http://bazaar.launchpad.dev/
