--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -630,6 +630,45 @@ pre.wrap {
 table.listing th {
     font-weight: bold;
 }
+table.listing {margin: 0; width: 100%; font-size: 90%;}
+table.listing, table.listing tbody, table.listing td.end-of-section {
+    border-bottom: 1px solid #d2d2d2;}
+table.listing thead, table.listing thead th, table.listing tfoot tr,
+table.listing tr.thead th {
+    border: 1px solid #d2d2d2;
+    background-color: #fff;
+}
+table.listing tr.category {border-bottom: 1px solid #d2d2d2;}
+table.listing tr.category th, table.listing tr.category td {padding-top: 1em;}
+table.listing tfoot td {border: 1px solid #d2d2d2;}
+table.listing thead td {border: none;}
+tr.white {background-color: #fff;}
+tr.shaded {background-color: #f6f6f6;}
+table.listing tr.note {font-size: smaller;}
+.amount {text-align: right;}
+table.listing th, table.listing td {padding: 0.25em;}
+/* We don't want extra padding on nested tables, such as batch navigation. */
+table.listing table th, table.listing table td {padding: 0;}
+table.listing thead th, table.listing tr.thead th {
+    font-size: 1.125em; white-space: nowrap;}
+table.listing td {border: 1px #d2d2d2; border-style: dotted none none none;}
+table.listing tr.note td {border-style: none;}
+table.listing img {vertical-align: middle;}
+table.listing tr.secondary th, table.listing tr.secondary td {border-top: none;}
+table.listing table tbody, table.listing table thead,
+table.listing table thead th, table.listing tfoot tr,
+table.listing table tfoot td, table.listing table td {
+    border: none;
+}
+table.listing table.simple {margin-left: 2em;}
+table.listing table.simple td {padding: 0.25em;}
+table.listing .section-heading {
+  font-size: 1.2em;
+  border: none;
+  padding-top: 1.5em;
+}
+table.compressed { width: auto }
+table.compressed td { padding: 0.25em 0.5em }
 table.narrow-listing {
     width: 45em;
 }
@@ -643,6 +682,115 @@ table.cozy-listing {
 table.cozy-listing td {
     border: 1px #d2d2d2;
     border-style: dotted none none none;
+}
+
+
+/* ==== Summary tables ==== */
+
+/* Tables presenting summary information have subdued headers and a little
+row spacing: */
+table.summary th, table.summary td,
+table.listing table.summary th, table.listing table.summary td {
+  padding: 0 0.5em 0.5em 0;
+}
+table.summary th {color: #555; font-weight: normal;}
+table.summary caption {font-style: italic; margin-left: 1em;}
+table.summary ul, table.summary ul li {
+  list-style-position: inside;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* --- Sortable tables --- */
+
+table.sortable a.sortheader {
+  color:#666666;
+  font-weight: bold;
+  text-decoration: none;
+  display: block;
+}
+table.sortable img.sortarrow {
+  padding-left: 2px;
+}
+th.ascending {
+  background-image: url(/@@/arrowDown);
+  background-position: center right;
+  background-repeat: no-repeat;
+}
+th.descending {
+  background-image: url(/@@/arrowUp);
+  background-position: center right;
+  background-repeat: no-repeat;
+}
+
+/* Used to indicate a value to be used to sort cells in a row */
+.sortkey, .revsortkey {display: none;}
+
+/* --- Action links and buttons --- */
+
+/*
+  Action links are those that begin the process of doing something.
+  For example, "Register a branch", "Edit profile", "Link to CVE".
+  When presented inline, they are rendered by launchpad-inline-link.pt.
+
+  Action buttons are those that submit a multi-row form.
+  Often an action button will have an "or _Cancel_" link next to it.
+
+  We want 0.5em horizontal gap between links and buttons in these sections.
+  Using margin-left would cause a bad gap to the left of a leftmost item.
+  Using margin-right would cause a bad gap to the right of a rightmost item.
+  We could fix these problems with :first-child/:last-child, but not in IE.
+  So we do something a little tricky.
+  We go ahead and give each child of the actions container a right margin:
+*/
+.actions * {margin-right: 0.5em;}
+.actions * * {margin-right: 0;} /* because ">" doesn't work in IE6 */
+/*
+  Then in addition to the top/bottom margins of the actions container, we
+  give it a *negative* right margin, cancelling out that of the last child.
+*/
+.actions {margin: 1em -0.5em 1em 0;}
+/*
+  Examples:
+  http://bugs.launchpad.dev/firefox/+bug/1 (after 'Affects' table)
+  http://bugs.launchpad.dev/firefox/+bug/1/+subscribe (bottom button)
+*/
+
+/* --- Batch navigation links --- */
+
+/* Next links have icons: */
+.batch-navigation-links .next {
+  background: center right no-repeat;
+  padding-right: 14px;
+}
+.batch-navigation-links .next {background-image: url(/@@/arrowRight);}
+.batch-navigation-links .next.inactive {
+  background-image: url(/@@/arrowRight-inactive);
+}
+.batch-navigation-links .inactive {color: #999ea7;}
+/* And all the links have spacing between them: */
+.batch-navigation-links .previous, .batch-navigation-links .next,
+.batch-navigation-links .last {
+  margin-left: 0.25em;
+}
+.batch-navigation-links .first, .batch-navigation-links .previous,
+.batch-navigation-links .next {
+  margin-right: 0.25em;
+}
+
+/* --- Other --- */
+
+/* No border on images that are links. */
+a img {
+  border: none;
+}
+/* No border on images that have link maps.
+ * There's nothing special for this, as the image and map
+ * may be separate.  So, just set no border for all images.
+ */
+img {
+  border: none;
 }
 
 ul.language, li.language             {
